<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/note_title"
            android:hint="@string/note_title"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/note_location"
            android:hint="@string/note_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/note_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/note_text"
            android:background="@drawable/edit_bg"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/note_type_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/type_rg">
            <RadioButton
                android:id="@+id/type_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_work" />
            <RadioButton
                android:id="@+id/type_life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_life" />
            <RadioButton
                android:id="@+id/type_others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_others" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/date_button"
            android:text="@string/date_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/add_note_button"
            android:text="@string/AddNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>