<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="100dp"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <EditText
        android:id="@+id/username_edit"
        android:singleLine="true"
        android:hint="@string/username_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/pwd_edit"
        android:singleLine="true"
        android:hint="@string/pwd_hint"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/submit_button"
        android:text="@string/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>